# qr-generator

./: Cargo.toml  Dockerfile  Readme.md
src/: main.rs
