[package]
name = "qr-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.34.0", features = ["full"] }
env_logger = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
qrc = "0.0.5"
moka = { version = "0.12", features = ["future"] }
